--- a/mantraui/src/main/res/values/strings.xml
+++ b/mantraui/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">News</string>
+    <string name="gallery">Gallery</string>
+    <string name="news">News</string>
+    <string name="videos">Videos</string>
 </resources>
