--- a/hamroui/src/main/res/values/strings.xml
+++ b/hamroui/src/main/res/values/strings.xml
@@ -22,6 +22,6 @@
     <string name="seek_to">Jump To</string>
     <string name="seek_to_hint">Seconds</string>
     <string name="youtubekey">AIzaSyClu7gEsgyK8_8BFzt6n8VXRFGq-nnb-bc</string>
-    <string name="loadfailed">UNABLE TO LAOD VIDEO</string>
+    <string name="loadfailed">UNABLE TO LOAD VIDEO</string>
     <string name="loadfaileMessage">We are sorry for not been able to play the video because of the content owner permission.However you can view this video in youtube.</string>
 </resources>
